adding some water plugins

--- a/FishRacingGame_/Saved/Config/WindowsEditor/Engine.ini
+++ b/FishRacingGame_/Saved/Config/WindowsEditor/Engine.ini
@@ -46,6 +46,9 @@ Paths=../../../Engine/Plugins/Interchange/Runtime/Content
 Paths=../../../Engine/Plugins/VirtualProduction/Takes/Content
 Paths=../../../Engine/Plugins/Editor/ObjectMixer/ObjectMixer/Content
 Paths=../../../Engine/Plugins/Editor/ObjectMixer/LightMixer/Content
+Paths=../../../Engine/Plugins/Experimental/Landmass/Content
+Paths=../../../Engine/Plugins/Experimental/Water/Content
+Paths=../../../Engine/Plugins/Experimental/WaterExtras/Content
 
 [/Script/UdpMessaging.UdpMessagingSettings]
 EnabledByDefault=False
