Working on restart. Controller doesn't work.

--- a/FishRacingGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/FishRacingGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -465,16 +465,25 @@ BoxComponent="\"Object\" \"Object.Collision.BodyInstance\" "
 NiagaraComponent="\"Object\" "
 FXSystemComponent="\"Object\" "
 Tutorial_C="\"Object\" "
+Image="\"Object\" "
+ResetGame_C="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=Niagara
 RecentAssetEditors=
 RecentAssetEditors=BlueprintEditor
@@ -486,8 +495,6 @@ RecentAssetEditors=LevelSequenceEditor
 RecentAssetEditors=MaterialInstanceEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialInstanceEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
 None=======
 
@@ -1639,26 +1646,31 @@ ScaleFactor=1
 bCanPreviewSwapAspectRatio=False
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/UIBlueprints/PlayerUI
-MRUItem1=/Game/ThirdPerson/Maps/OpeningCutscene
-MRUItem2=/Game/ThirdPerson/Maps/MainMenuMap
-MRUItem3=/Game/UIBlueprints/Tutorial
-MRUItem4=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem5=/Game/UIBlueprints/MainMenu
-MRUItem6=/Game/Characters/Particle_Effects/Splash
-MRUItem7=/Game/ThirdPerson/Maps/ThirdPersonMap
-MRUItem8=/Game/ThirdPerson/Blueprints/SplashZone
-MRUItem9=/Game/ThirdPerson/Blueprints/Bubbles
-MRUItem10=/Game/Characters/Fish/Fish3
-MRUItem11=/Game/Characters/Fish/Fish3_PhysicsAsset
-MRUItem12=/Game/Characters/Fish/Fish3_Skeleton
-MRUItem13=/Game/IntroSequence
-MRUItem14=/Game/LevelPrototyping/Materials/MI_UnderwaterPostProcess
-MRUItem15=/Game/LevelPrototyping/Materials/UnderwaterPostProcess
-MRUItem16=/Game/LevelPrototyping/Materials/FR_MAT/MaterialInstance/MI_WaterSerface
-MRUItem17=/Game/UIBlueprints/MainMenuGameMode
-MRUItem18=/Game/UIBlueprints/FG_MainMenu_Controller
-MRUItem19=/Game/ThirdPerson/Blueprints/Current
+MRUItem0=/Game/UIBlueprints/ResetGameMode
+MRUItem1=/Game/UIBlueprints/FG_MainMenu_Controller
+MRUItem2=/Game/UIBlueprints/ResetController
+MRUItem3=/Game/UIBlueprints/MainMenuGameMode
+MRUItem4=/Game/UIBlueprints/MainMenuPawn
+MRUItem5=/Game/UIBlueprints/ResetPawn
+MRUItem6=/Game/UIBlueprints/PlayerUI
+MRUItem7=/Game/UIBlueprints/MainMenu
+MRUItem8=/Game/UIBlueprints/ResetGame
+MRUItem9=/Game/ThirdPerson/Maps/OpeningCutscene
+MRUItem10=/Game/ThirdPerson/Maps/MainMenuMap
+MRUItem11=/Game/UIBlueprints/Tutorial
+MRUItem12=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem13=/Game/Characters/Particle_Effects/Splash
+MRUItem14=/Game/ThirdPerson/Maps/ThirdPersonMap
+MRUItem15=/Game/ThirdPerson/Blueprints/SplashZone
+MRUItem16=/Game/ThirdPerson/Blueprints/Bubbles
+MRUItem17=/Game/Characters/Fish/Fish3
+MRUItem18=/Game/Characters/Fish/Fish3_PhysicsAsset
+MRUItem19=/Game/Characters/Fish/Fish3_Skeleton
+MRUItem20=/Game/IntroSequence
+MRUItem21=/Game/LevelPrototyping/Materials/MI_UnderwaterPostProcess
+MRUItem22=/Game/LevelPrototyping/Materials/UnderwaterPostProcess
+MRUItem23=/Game/LevelPrototyping/Materials/FR_MAT/MaterialInstance/MI_WaterSerface
+MRUItem24=/Game/ThirdPerson/Blueprints/Current
 
 [UMGSequencerSettings SequencerSettings]
 AutoChangeMode=None
@@ -2619,6 +2631,61 @@ NiagaraComponent.ComponentReplication=True
 NiagaraComponent.Cooking=True
 NiagaraComponent.Events=True
 PlayerUI_C.Default=True
+Image.Layout=True
+Image.Appearance=True
+Image.Accessibility=True
+Image.Behavior=True
+Image.Render Transform=True
+Image.Performance=True
+Image.Rendering=True
+Image.Navigation=True
+Image.Localization=True
+Image.Events=True
+Widget.Layout=True
+MainMenu_C.Default=True
+ResetController_C.PlayerController=True
+ResetController_C.Tick=True
+ResetController_C.Cheat Manager=True
+ResetController_C.MouseInterface=True
+ResetController_C.Game=True
+ResetController_C.Input=True
+ResetController_C.WorldPartition=True
+ResetController_C.Controller=True
+ResetController_C.Replication=True
+ResetController_C.Actor=True
+ResetController_C.HLOD=True
+ResetController_C.Physics=True
+ResetController_C.Events=True
+ResetGameMode_C.Tick=True
+ResetGameMode_C.Classes=True
+ResetGameMode_C.Game=True
+ResetGameMode_C.GameMode=True
+ResetGameMode_C.Physics=True
+ResetGameMode_C.Events=True
+ResetPawn_C.Pawn=True
+ResetPawn_C.Tick=True
+ResetPawn_C.Camera=True
+ResetPawn_C.Replication=True
+ResetPawn_C.Rendering=True
+ResetPawn_C.Collision=True
+ResetPawn_C.Actor=True
+ResetPawn_C.Input=True
+ResetPawn_C.HLOD=True
+ResetPawn_C.Physics=True
+ResetPawn_C.WorldPartition=True
+ResetPawn_C.Events=True
+MainMenuPawn_C.Pawn=True
+MainMenuPawn_C.Tick=True
+MainMenuPawn_C.Camera=True
+MainMenuPawn_C.Replication=True
+MainMenuPawn_C.Rendering=True
+MainMenuPawn_C.Collision=True
+MainMenuPawn_C.Actor=True
+MainMenuPawn_C.Input=True
+MainMenuPawn_C.HLOD=True
+MainMenuPawn_C.Physics=True
+MainMenuPawn_C.WorldPartition=True
+MainMenuPawn_C.Events=True
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2665,7 +2732,7 @@ bShowParentClassInOverrides=True
 bShowEmptySections=True
 bShowAccessSpecifier=False
 Bookmarks=()
-PerBlueprintSettings=()
+PerBlueprintSettings=(("/Game/UIBlueprints/ResetGame.ResetGame", (Breakpoints=((bEnabled=True,Node="/Game/UIBlueprints/ResetGame.ResetGame:EventGraph.K2Node_CallFunction_1")))))
 bIncludeCommentNodesInBookmarksTab=True
 bShowBookmarksForCurrentDocumentOnlyInTab=False
 GraphEditorQuickJumps=()
@@ -2690,6 +2757,11 @@ None=======
 /Game/Characters/Particle_Effects/Splash.Splash=1
 /Game/ThirdPerson/Blueprints/SplashZone.SplashZone=1
 /Game/UIBlueprints/Tutorial.Tutorial=1
+/Game/UIBlueprints/ResetController.ResetController=1
+/Game/UIBlueprints/ResetGameMode.ResetGameMode=1
+/Game/UIBlueprints/ResetPawn.ResetPawn=1
+/Game/UIBlueprints/MainMenuPawn.MainMenuPawn=1
+/Game/UIBlueprints/ResetGame.ResetGame=1
 
 [DetailCustomWidgetExpansion]
 GeneralProjectSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,GameMapsSettings.DefaultModes.SelectedGameModeDetails,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options,InputSettings.Platforms.InputPlatformSettings_Android,InputSettings.Platforms.InputPlatformSettings_IOS,InputSettings.Platforms.InputPlatformSettings_Linux,InputSettings.Platforms.InputPlatformSettings_LinuxArm64,InputSettings.Platforms.InputPlatformSettings_Mac,InputSettings.Platforms.InputPlatformSettings_TVOS,InputSettings.Platforms.InputPlatformSettings_Windows,TakeRecorderProjectSettings.Audio Input Device.AudioInputDevice,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod
@@ -2835,6 +2907,9 @@ ArrowComponent=BP_ThirdPersonCharacter_C.TransformCommon.Transform,K2Node_Variab
 PropertyWrapper=BP_ThirdPersonCharacter_C.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement
 NiagaraComponent=BP_ThirdPersonCharacter_C.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement
 Tutorial_C=BP_ThirdPersonCharacter_C.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement
+PlayerUI_C=BP_ThirdPersonCharacter_C.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement
+ResetGame_C=BP_ThirdPersonCharacter_C.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement
+K2Node_Variable=BP_ThirdPersonCharacter_C.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -2950,6 +3025,7 @@ RecentlyPlaced=/Game/ThirdPerson/Blueprints/Bubbles.Bubbles;
 InputSettings.Bindings=False
 CableActor.Physics=False
 StaticMeshActor.Materials=False
+ResetGameMode_C.Tick=True
 
 [PluginBrowser]
 InstalledPlugins=AsyncLevelLoad
@@ -3249,6 +3325,7 @@ Results=None
 
 [SuppressableDialogs]
 DeleteConfirmationVariable_Warning=False
+ChangeVariableType_Warning=False
 
 [MaterialInstanceEditor]
 bShowGrid=True
