Added win screen

--- a/FishRacingGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/FishRacingGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -269,8 +269,8 @@ WorldPartitionRuntimeHash="\"Object\" "
 Object="\"Object\" "
 CanvasPanel="\"Object\" \"Object.Layout.Slot\" "
 PanelWidget="\"Object\" \"Object.Layout.Slot\" "
-Widget="\"Object\" \"Object.Appearance.Font\" \"Object.Appearance.Margin\" \"Object.Layout.Slot\" "
-Visual="\"Object\" \"Object.Appearance.Font\" \"Object.Appearance.Margin\" \"Object.Layout.Slot\" "
+Widget="\"Object\" "
+Visual="\"Object\" "
 TextBlock="\"Object\" \"Object.Appearance.Font\" \"Object.Appearance.Margin\" \"Object.Layout.Slot\" "
 TextLayoutWidget="\"Object\" \"Object.Appearance.Font\" \"Object.Appearance.Margin\" \"Object.Layout.Slot\" "
 Button="\"Object\" \"Object.Layout.Slot\" "
@@ -479,17 +479,19 @@ SoundNodeAssetReferencer="\"Object\" "
 SoundNode="\"Object\" "
 InputMappingContext="\"Object\" \"Object.Mappings.Mappings.Mappings[14]\" \"Object.Mappings.Mappings.Mappings[15]\" "
 InputAction="\"Object\" "
+VictoryScreen_C="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
 RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
-RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
@@ -1660,32 +1662,33 @@ ScaleFactor=1
 bCanPreviewSwapAspectRatio=False
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/UIBlueprints/Tutorial
-MRUItem1=/Game/ThirdPerson/Input/Actions/IA_Quit
-MRUItem2=/Game/UIBlueprints/ResetGame
-MRUItem3=/Game/ThirdPerson/Input/Actions/IA_Jump
-MRUItem4=/Game/ThirdPerson/Input/Actions/IA_Reset
-MRUItem5=/Game/ThirdPerson/Input/IMC_Default
-MRUItem6=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem7=/Game/Audio/Race_Level
-MRUItem8=/Game/IntroSequence
-MRUItem9=/Game/UIBlueprints/PlayerUI
-MRUItem10=/Game/ThirdPerson/Maps/OpeningCutscene
-MRUItem11=/Game/ThirdPerson/Maps/MainMenuMap
-MRUItem12=/Game/UIBlueprints/MainMenu
-MRUItem13=/Game/Characters/Particle_Effects/Splash
-MRUItem14=/Game/ThirdPerson/Maps/ThirdPersonMap
-MRUItem15=/Game/ThirdPerson/Blueprints/SplashZone
-MRUItem16=/Game/ThirdPerson/Blueprints/Bubbles
-MRUItem17=/Game/Characters/Fish/Fish3
-MRUItem18=/Game/Characters/Fish/Fish3_PhysicsAsset
-MRUItem19=/Game/Characters/Fish/Fish3_Skeleton
-MRUItem20=/Game/LevelPrototyping/Materials/MI_UnderwaterPostProcess
-MRUItem21=/Game/LevelPrototyping/Materials/UnderwaterPostProcess
-MRUItem22=/Game/LevelPrototyping/Materials/FR_MAT/MaterialInstance/MI_WaterSerface
-MRUItem23=/Game/UIBlueprints/MainMenuGameMode
-MRUItem24=/Game/UIBlueprints/FG_MainMenu_Controller
-MRUItem25=/Game/ThirdPerson/Blueprints/Current
+MRUItem0=/Game/UIBlueprints/VictoryScreen
+MRUItem1=/Game/UIBlueprints/PlayerUI
+MRUItem2=/Game/UIBlueprints/Tutorial
+MRUItem3=/Game/ThirdPerson/Input/Actions/IA_Quit
+MRUItem4=/Game/UIBlueprints/ResetGame
+MRUItem5=/Game/ThirdPerson/Input/Actions/IA_Jump
+MRUItem6=/Game/ThirdPerson/Input/Actions/IA_Reset
+MRUItem7=/Game/ThirdPerson/Input/IMC_Default
+MRUItem8=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem9=/Game/Audio/Race_Level
+MRUItem10=/Game/IntroSequence
+MRUItem11=/Game/ThirdPerson/Maps/OpeningCutscene
+MRUItem12=/Game/ThirdPerson/Maps/MainMenuMap
+MRUItem13=/Game/UIBlueprints/MainMenu
+MRUItem14=/Game/Characters/Particle_Effects/Splash
+MRUItem15=/Game/ThirdPerson/Maps/ThirdPersonMap
+MRUItem16=/Game/ThirdPerson/Blueprints/SplashZone
+MRUItem17=/Game/ThirdPerson/Blueprints/Bubbles
+MRUItem18=/Game/Characters/Fish/Fish3
+MRUItem19=/Game/Characters/Fish/Fish3_PhysicsAsset
+MRUItem20=/Game/Characters/Fish/Fish3_Skeleton
+MRUItem21=/Game/LevelPrototyping/Materials/MI_UnderwaterPostProcess
+MRUItem22=/Game/LevelPrototyping/Materials/UnderwaterPostProcess
+MRUItem23=/Game/LevelPrototyping/Materials/FR_MAT/MaterialInstance/MI_WaterSerface
+MRUItem24=/Game/UIBlueprints/MainMenuGameMode
+MRUItem25=/Game/UIBlueprints/FG_MainMenu_Controller
+MRUItem26=/Game/ThirdPerson/Blueprints/Current
 
 [UMGSequencerSettings SequencerSettings]
 AutoChangeMode=None
@@ -2774,6 +2777,19 @@ ResetGame_C.Accessibility=True
 ResetGame_C.Rendering=True
 ResetGame_C.Navigation=True
 ResetGame_C.Default=True
+VictoryScreen_C.Default=True
+VictoryScreen_C.Appearance=True
+VictoryScreen_C.Input=True
+VictoryScreen_C.Interaction=True
+VictoryScreen_C.Designer=True
+VictoryScreen_C.Performance=True
+VictoryScreen_C.Layout=True
+VictoryScreen_C.Behavior=True
+VictoryScreen_C.Render Transform=True
+VictoryScreen_C.Localization=True
+VictoryScreen_C.Accessibility=True
+VictoryScreen_C.Rendering=True
+VictoryScreen_C.Navigation=True
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2856,6 +2872,7 @@ None=======
 /Game/ThirdPerson/Input/Actions/IA_Reset.IA_Reset=1
 /Game/ThirdPerson/Input/Actions/IA_Jump.IA_Jump=1
 /Game/ThirdPerson/Input/Actions/IA_Quit.IA_Quit=1
+/Game/UIBlueprints/VictoryScreen.VictoryScreen=1
 
 [DetailCustomWidgetExpansion]
 GeneralProjectSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,GameMapsSettings.DefaultModes.SelectedGameModeDetails,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options,InputSettings.Platforms.InputPlatformSettings_Android,InputSettings.Platforms.InputPlatformSettings_IOS,InputSettings.Platforms.InputPlatformSettings_Linux,InputSettings.Platforms.InputPlatformSettings_LinuxArm64,InputSettings.Platforms.InputPlatformSettings_Mac,InputSettings.Platforms.InputPlatformSettings_TVOS,InputSettings.Platforms.InputPlatformSettings_Windows,TakeRecorderProjectSettings.Audio Input Device.AudioInputDevice,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod
@@ -3127,6 +3144,7 @@ InputSettings.Bindings=False
 CableActor.Physics=False
 StaticMeshActor.Materials=False
 ResetGameMode_C.Tick=True
+K2Node_VariableGet.Variable=False
 
 [PluginBrowser]
 InstalledPlugins=AsyncLevelLoad
