Added player ui to track level.

--- a/FishRacingGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/FishRacingGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -261,7 +261,7 @@ SequenceBrowser.HiddenColumns=CurveNameList
 SequenceBrowser.HiddenColumns=Class
 
 [EditorStartup]
-LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
+LastLevel=/Game/ThirdPerson/Maps/RacetrackMap
 
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
@@ -490,9 +490,9 @@ CleanShutdown=True
 DebuggerAttached=False
 RecentAssetEditors=
 RecentAssetEditors=
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=
 RecentAssetEditors=SkeletonEditor
 RecentAssetEditors=SkeletalMeshEditor
@@ -1670,12 +1670,12 @@ ScaleFactor=1
 bCanPreviewSwapAspectRatio=False
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/ThirdPerson/Maps/ThirdPersonMap
-MRUItem1=/Game/ThirdPerson/Maps/OpeningCutscene
-MRUItem2=/Game/UIBlueprints/Credits
-MRUItem3=/Game/UIBlueprints/MainMenu
-MRUItem4=/Game/ThirdPerson/Maps/MainMenuMap
-MRUItem5=/Game/ThirdPerson/Maps/RacetrackMap
+MRUItem0=/Game/ThirdPerson/Maps/RacetrackMap
+MRUItem1=/Game/ThirdPerson/Maps/ThirdPersonMap
+MRUItem2=/Game/ThirdPerson/Maps/OpeningCutscene
+MRUItem3=/Game/UIBlueprints/Credits
+MRUItem4=/Game/UIBlueprints/MainMenu
+MRUItem5=/Game/ThirdPerson/Maps/MainMenuMap
 MRUItem6=/Game/Characters/Fish/Fish3_Skeleton
 MRUItem7=/Game/Characters/Fish/Fish3
 MRUItem8=/Game/UIBlueprints/ResetGame
@@ -2876,6 +2876,14 @@ VolumetricCloud.Cooking=True
 VolumetricCloud.Replication=True
 VolumetricCloud.Networking=True
 VolumetricCloud.Actor=True
+RacetrackMap_C.Tick=True
+RacetrackMap_C.Replication=True
+RacetrackMap_C.Actor=True
+RacetrackMap_C.Input=True
+RacetrackMap_C.HLOD=True
+RacetrackMap_C.Physics=True
+RacetrackMap_C.WorldPartition=True
+RacetrackMap_C.Events=True
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2965,6 +2973,7 @@ None=======
 /Game/Characters/Fish/Fish3_Skeleton.Fish3_Skeleton=1
 /Game/ThirdPerson/Maps/ThirdPersonMap_BuiltData.ThirdPersonMap_BuiltData=1
 /Game/UIBlueprints/Credits.Credits=1
+/Game/ThirdPerson/Maps/RacetrackMap.RacetrackMap:PersistentLevel.RacetrackMap=1
 
 [DetailCustomWidgetExpansion]
 GeneralProjectSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,GameMapsSettings.DefaultModes.SelectedGameModeDetails,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options,InputSettings.Platforms.InputPlatformSettings_Android,InputSettings.Platforms.InputPlatformSettings_IOS,InputSettings.Platforms.InputPlatformSettings_Linux,InputSettings.Platforms.InputPlatformSettings_LinuxArm64,InputSettings.Platforms.InputPlatformSettings_Mac,InputSettings.Platforms.InputPlatformSettings_TVOS,InputSettings.Platforms.InputPlatformSettings_Windows,TakeRecorderProjectSettings.Audio Input Device.AudioInputDevice,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod
@@ -3085,7 +3094,7 @@ SkeletalMeshComponent=
 EdGraphNode_Comment=BP_ThirdPersonCharacter_C.TransformCommon.Transform
 K2Node_EnhancedInputAction=BP_ThirdPersonCharacter_C.TransformCommon.Transform
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash
-WorldPartitionRuntimeSpatialHash=
+WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartitionSetup.RuntimeHash
 EdGraph=BP_ThirdPersonCharacter_C.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement
 K2Node_VariableGet=BP_ThirdPersonCharacter_C.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement
 K2Node_VariableSet=BP_ThirdPersonCharacter_C.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement
@@ -3247,10 +3256,10 @@ InstalledPlugins=ScreenSpaceFogScattering
 InstalledPlugins=WMFCodecs
 
 [MRU]
-MRUItem0=/Game/ThirdPerson/Maps/ThirdPersonMap
-MRUItem1=/Game/ThirdPerson/Maps/OpeningCutscene
-MRUItem2=/Game/ThirdPerson/Maps/MainMenuMap
-MRUItem3=/Game/ThirdPerson/Maps/RacetrackMap
+MRUItem0=/Game/ThirdPerson/Maps/RacetrackMap
+MRUItem1=/Game/ThirdPerson/Maps/ThirdPersonMap
+MRUItem2=/Game/ThirdPerson/Maps/OpeningCutscene
+MRUItem3=/Game/ThirdPerson/Maps/MainMenuMap
 MRUItem4=/Game/OpeningCutscene
 MRUItem5=/Game/MainMenuMap
 
