--- a/FishRacingGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/FishRacingGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -163,7 +163,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport2",ConfigSettin
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettings=(ViewportType=LVT_OrthoXY,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,LocalExposure=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,VisualizeLocalExposure=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,VisualizeNanite=0,VisualizeLumen=0,VisualizeSubstrate=0,VisualizeGroom=0,VisualizeVirtualShadowMap=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=0,CompositeEditorPrimitives=1,OpaqueCompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=0,VisualizeMotionBlur=0,VisualizeMotionVectors=0,VisualizeReprojection=0,VisualizeTemporalUpscaler=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,LumenReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,VisualizeInstanceUpdates=0,InstancedGrass=1,DynamicShadows=1,Particles=1,Niagara=1,HeterogeneousVolumes=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=1,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,VisualizeLevelInstanceEditing=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,Cloud=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,PhysicsField=0,VisualizeGlobalDistanceField=0,VisualizeLightingOnProbes=0,ScreenSpaceAO=1,DistanceFieldAO=1,LumenGlobalIllumination=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,VirtualTexturePendingMips=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,DisableOcclusionQueries=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VisualizePostProcessStack=0,VirtualTexturePrimitives=0,VisualizeVolumetricCloudConservativeDensity=0,VisualizeVolumetricCloudEmptySpaceSkipping=0,VirtualShadowMapCaching=1,DrawOnlyVSMInvalidatingGeo=0,DebugDrawDistantVirtualSMLights=0,VirtualTextureResidency=1,InputDebugVisualizer=1,LumenScreenTraces=1,LumenDetailTraces=1,LumenGlobalTraces=1,LumenFarFieldTraces=1,LumenSecondaryBounces=1,LumenShortRangeAmbientOcclusion=1,NaniteMeshes=1,NaniteStreamingGeometry=1,VisualizeGPUSkinCache=0,ShaderPrint=1",GameShowFlagsString="PostProcessing=0,Bloom=1,LocalExposure=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,VisualizeLocalExposure=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,VisualizeNanite=0,VisualizeLumen=0,VisualizeSubstrate=0,VisualizeGroom=0,VisualizeVirtualShadowMap=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=0,OpaqueCompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,VisualizeMotionVectors=0,VisualizeReprojection=0,VisualizeTemporalUpscaler=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,LumenReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,VisualizeInstanceUpdates=0,InstancedGrass=1,DynamicShadows=1,Particles=1,Niagara=1,HeterogeneousVolumes=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=0,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=0,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=0,VisualizeLevelInstanceEditing=1,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=0,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=1,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,Cloud=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,PhysicsField=0,VisualizeGlobalDistanceField=0,VisualizeLightingOnProbes=0,ScreenSpaceAO=1,DistanceFieldAO=1,LumenGlobalIllumination=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,VirtualTexturePendingMips=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,DisableOcclusionQueries=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VisualizePostProcessStack=0,VirtualTexturePrimitives=0,VisualizeVolumetricCloudConservativeDensity=0,VisualizeVolumetricCloudEmptySpaceSkipping=0,VirtualShadowMapCaching=1,DrawOnlyVSMInvalidatingGeo=0,DebugDrawDistantVirtualSMLights=0,VirtualTextureResidency=1,InputDebugVisualizer=1,LumenScreenTraces=1,LumenDetailTraces=1,LumenGlobalTraces=1,LumenFarFieldTraces=1,LumenSecondaryBounces=1,LumenShortRangeAmbientOcclusion=1,NaniteMeshes=1,NaniteStreamingGeometry=1,VisualizeGPUSkinCache=0,ShaderPrint=1",BufferVisualizationMode="",NaniteVisualizationMode="",LumenVisualizationMode="",StrataVisualizationMode="",GroomVisualizationMode="",VirtualShadowMapVisualizationMode="",RayTracingDebugVisualizationMode="",GPUSkinCacheVisualizationMode="",ExposureSettings=(FixedEV100=1.000000,bFixed=False),FOVAngle=90.000000,FarViewPlane=0.000000,bIsRealtime=False,bShowOnScreenStats=True,EnabledStats=,bShowFullToolbar=True))
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/ThirdPerson/Maps
+ContentBrowserTab1.SelectedPaths=/Game/ThirdPerson/Blueprints
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.FavoritesAreaExpanded=False
 ContentBrowserTab1.PathAreaExpanded=True
@@ -433,7 +433,7 @@ LevelSequenceBurnInOptions="\"Object\" "
 MovieSceneBindingOverrides="\"Object\" "
 DefaultLevelSequenceInstanceData="\"Object\" "
 CapsuleComponent="\"Object\" "
-ShapeComponent="\"Object\" \"Object.Collision.BodyInstance\" "
+ShapeComponent="\"Object\" "
 Actor="\"Object\" "
 MainMenu_C="\"Object\" "
 UserWidget="\"Object\" "
@@ -463,7 +463,7 @@ NiagaraBakerOutput="\"Object\" "
 NiagaraSystem="\"Object\" "
 FXSystemAsset="\"Object\" "
 SplashZone_C="\"Object\" "
-BoxComponent="\"Object\" \"Object.Collision.BodyInstance\" "
+BoxComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 NiagaraComponent="\"Object\" "
 FXSystemComponent="\"Object\" "
 Tutorial_C="\"Object\" "
@@ -488,6 +488,9 @@ Credits_C="\"Object\" "
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=SoundCueEditor
@@ -499,9 +502,6 @@ RecentAssetEditors=SkeletonEditor
 RecentAssetEditors=SkeletalMeshEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=
-RecentAssetEditors=
-RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
@@ -1670,30 +1670,30 @@ ScaleFactor=1
 bCanPreviewSwapAspectRatio=False
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/ThirdPerson/Maps/ThirdPersonMap
-MRUItem1=/Game/ThirdPerson/Maps/RacetrackMap
-MRUItem2=/Game/Audio/Race_Level
-MRUItem3=/Game/ThirdPerson/Maps/OpeningCutscene
-MRUItem4=/Game/ThirdPerson/Maps/MainMenuMap
-MRUItem5=/Game/UIBlueprints/Credits
-MRUItem6=/Game/UIBlueprints/MainMenu
-MRUItem7=/Game/Characters/Fish/Fish3_Skeleton
-MRUItem8=/Game/Characters/Fish/Fish3
-MRUItem9=/Game/UIBlueprints/ResetGame
-MRUItem10=/Game/UIBlueprints/VictoryScreen
-MRUItem11=/Game/Audio/Main_Menu
-MRUItem12=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem13=/Game/ThirdPerson/Blueprints/Current
-MRUItem14=/Game/ThirdPerson/Blueprints/Bubbles
-MRUItem15=/Game/UIBlueprints/Tutorial
-MRUItem16=/Game/ThirdPerson/Input/Actions/IA_Quit
-MRUItem17=/Game/ThirdPerson/Input/Actions/IA_Jump
-MRUItem18=/Game/ThirdPerson/Input/Actions/IA_Reset
-MRUItem19=/Game/ThirdPerson/Input/IMC_Default
-MRUItem20=/Game/IntroSequence
-MRUItem21=/Game/UIBlueprints/PlayerUI
-MRUItem22=/Game/Characters/Particle_Effects/Splash
-MRUItem23=/Game/ThirdPerson/Blueprints/SplashZone
+MRUItem0=/Game/ThirdPerson/Blueprints/Current
+MRUItem1=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem2=/Game/ThirdPerson/Blueprints/SplashZone
+MRUItem3=/Game/ThirdPerson/Maps/ThirdPersonMap
+MRUItem4=/Game/ThirdPerson/Maps/RacetrackMap
+MRUItem5=/Game/Audio/Race_Level
+MRUItem6=/Game/ThirdPerson/Maps/OpeningCutscene
+MRUItem7=/Game/ThirdPerson/Maps/MainMenuMap
+MRUItem8=/Game/UIBlueprints/Credits
+MRUItem9=/Game/UIBlueprints/MainMenu
+MRUItem10=/Game/Characters/Fish/Fish3_Skeleton
+MRUItem11=/Game/Characters/Fish/Fish3
+MRUItem12=/Game/UIBlueprints/ResetGame
+MRUItem13=/Game/UIBlueprints/VictoryScreen
+MRUItem14=/Game/Audio/Main_Menu
+MRUItem15=/Game/ThirdPerson/Blueprints/Bubbles
+MRUItem16=/Game/UIBlueprints/Tutorial
+MRUItem17=/Game/ThirdPerson/Input/Actions/IA_Quit
+MRUItem18=/Game/ThirdPerson/Input/Actions/IA_Jump
+MRUItem19=/Game/ThirdPerson/Input/Actions/IA_Reset
+MRUItem20=/Game/ThirdPerson/Input/IMC_Default
+MRUItem21=/Game/IntroSequence
+MRUItem22=/Game/UIBlueprints/PlayerUI
+MRUItem23=/Game/Characters/Particle_Effects/Splash
 MRUItem24=/Game/Characters/Fish/Fish3_PhysicsAsset
 MRUItem25=/Game/LevelPrototyping/Materials/MI_UnderwaterPostProcess
 MRUItem26=/Game/LevelPrototyping/Materials/UnderwaterPostProcess
@@ -3090,7 +3090,7 @@ UdpMessagingSettings=EnhancedInputDeveloperSettings.Modifier Default Values.Inpu
 WmfMediaSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,GameMapsSettings.DefaultModes.SelectedGameModeDetails,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options,InputSettings.Platforms.InputPlatformSettings_Android,InputSettings.Platforms.InputPlatformSettings_IOS,InputSettings.Platforms.InputPlatformSettings_Linux,InputSettings.Platforms.InputPlatformSettings_LinuxArm64,InputSettings.Platforms.InputPlatformSettings_Mac,InputSettings.Platforms.InputPlatformSettings_TVOS,InputSettings.Platforms.InputPlatformSettings_Windows,TakeRecorderProjectSettings.Audio Input Device.AudioInputDevice,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod
 StaticMeshComponent=StaticMeshComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,PostProcessVolume.Lens.Lens
 BP_ThirdPersonCharacter_C=BP_ThirdPersonCharacter_C.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement
-SkeletalMeshComponent=
+SkeletalMeshComponent=BP_ThirdPersonCharacter_C.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement
 EdGraphNode_Comment=BP_ThirdPersonCharacter_C.TransformCommon.Transform
 K2Node_EnhancedInputAction=BP_ThirdPersonCharacter_C.TransformCommon.Transform
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash
@@ -3108,7 +3108,7 @@ BrushComponent=PostProcessVolume.Lens.Lens
 StaticMeshActor=PostProcessVolume.Lens.Lens,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,StaticMeshComponent.Collision.Collision
 CineCameraActor=PostProcessVolume.Lens.Lens
 SceneComponent=PostProcessVolume.Lens.Lens,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,StaticMeshComponent.Collision.Collision
-CapsuleComponent=PostProcessVolume.Lens.Lens
+CapsuleComponent=
 BoneProxy=BoneProxy.Transforms.Bone,BoneProxy.Transforms.Reference,BoneProxy.Transforms.Mesh Relative
 PlayerStart=PostProcessVolume.Lens.Lens
 SplashZone_C=PostProcessVolume.Lens.Lens,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,StaticMeshComponent.Collision.Collision
@@ -3128,6 +3128,7 @@ InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingCont
 InputAction=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/IA_Jump.IA_Jump,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/IA_Move.IA_Move,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/IA_Look.IA_Look
 SkyAtmosphere=PostProcessVolume.Lens.Lens
 Credits_C=BP_ThirdPersonCharacter_C.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement
+K2Node=BP_ThirdPersonCharacter_C.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -3249,6 +3250,7 @@ CableActor.Physics=False
 StaticMeshActor.Materials=False
 ResetGameMode_C.Tick=True
 K2Node_VariableGet.Variable=False
+BoxComponent.Shape=False
 
 [PluginBrowser]
 InstalledPlugins=AsyncLevelLoad
