Fish now actually aligns to slope properly

--- a/FishRacingGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/FishRacingGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -1670,8 +1670,8 @@ ScaleFactor=1
 bCanPreviewSwapAspectRatio=False
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/ThirdPerson/Blueprints/Current
-MRUItem1=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem0=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem1=/Game/ThirdPerson/Blueprints/Current
 MRUItem2=/Game/ThirdPerson/Blueprints/SplashZone
 MRUItem3=/Game/ThirdPerson/Maps/ThirdPersonMap
 MRUItem4=/Game/ThirdPerson/Maps/RacetrackMap
@@ -2884,6 +2884,21 @@ RacetrackMap_C.HLOD=True
 RacetrackMap_C.Physics=True
 RacetrackMap_C.WorldPartition=True
 RacetrackMap_C.Events=True
+CapsuleComponent.Variable=True
+CapsuleComponent.TransformCommon=True
+CapsuleComponent.Sockets=True
+CapsuleComponent.Shape=True
+CapsuleComponent.Navigation=True
+CapsuleComponent.HLOD=True
+CapsuleComponent.ComponentTick=True
+CapsuleComponent.Rendering=True
+CapsuleComponent.PathTracing=True
+CapsuleComponent.Physics=True
+CapsuleComponent.Collision=True
+CapsuleComponent.Tags=True
+CapsuleComponent.ComponentReplication=True
+CapsuleComponent.Cooking=True
+CapsuleComponent.Events=True
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
